# alpr-vlm

./: README.md  app.py  pyproject.toml  requirements.txt
